--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ include_directories(include)
 message(STATUS "leoox src dir = ${CMAKE_SOURCE_DIR}")
 message(STATUS "leoox binary dir = ${CMAKE_BINARY_DIR}")
 add_executable(1-100 scripts/leetcode1-100/0_main.cpp)
+add_executable(mutil-threads scripts/mutil-threads/0_main.cpp)
