--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,6 @@ message(STATUS "leoox binary dir = ${CMAKE_BINARY_DIR}")
 add_executable(1-100 scripts/leetcode1-100/0_main.cpp)
 add_executable(mutil-threads scripts/mutil-threads/0_main.cpp)
 add_executable(dp scripts/dp/0_main.cpp)
+add_executable(tree scripts/tree/0_main.cpp)
+add_executable(graph scripts/graph/0_main.cpp)
+add_executable(week_race scripts/week_race/0_main.cpp)
