add base function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_executable(tree scripts/tree/0_main.cpp)
 add_executable(graph scripts/graph/0_main.cpp)
 add_executable(week_race scripts/week_race/0_main.cpp)
 add_executable(hash_map scripts/hash_map/0_main.cpp)
+add_executable(backtrack scripts/backtrackingAlgorithm/0_main.cpp)
