--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ add_executable(graph scripts/graph/0_main.cpp)
 add_executable(week_race scripts/week_race/0_main.cpp)
 add_executable(hash_map scripts/hash_map/0_main.cpp)
 add_executable(backtrack scripts/backtrackingAlgorithm/0_main.cpp)
+add_executable(help_others help_others/lj/1.cpp)
